Location based search working with geolocation and city, state search. Still need to improve the search results page
